package com.xinqihd.sns.gameserver.proto;
//Get the server list

option java_outer_classname = "XinqiBceSelectRole"; 

message BceSelectRole {
  /**
  * The user select the userid at given server
  */
  optional string userid = 1;
  optional string serverid = 2;
  optional string uuid = 3;
  optional string screen = 4;
  optional string devicetoken = 5;
  optional string client = 6;
  optional string lang = 7;
  //The secure token
  optional string token = 8;
}
